@@ -1,6 +1,6 @@
 /*
 Theme Name: Portfolio Press
-Description: A portfolio theme for showcasing your work with custom post types.  WordPress 3.0 required.  For a video screencast showing how to set up the portfolio, please visit the theme homepage.  Spanish translations included.
+Description: A portfolio theme for showcasing your work with custom post types.  WordPress 3.0 required.  For a video screencast showing how to set up the portfolio, visit http://wptheming.com/portfolio-theme.  Spanish and French translations included.
 Author: Devin Price
 Author URI: http://wptheming.com/
 Theme URI: http://wptheming.com/portfolio-theme/
